feat: implement semantic rag cache